tests/backend/checkmach/fail8.output
File "fail8.ml", line 3, characters 5-15:
Error: Annotation check for zero_alloc strict failed on function camlFail8__test30_HIDE_STAMP
